2006/7/29 -- released version 20060729_trunk

2006/7/28 -- released version 20060728_trunk

2006/7/27 -- released version 20060727_trunk

2006/7/26 -- released version 20060726_trunk

2006/7/25 -- released version 20060725_trunk

2006/7/24 -- released version 20060724_trunk

2006/7/23 -- released version 20060723_trunk

2006/7/22 -- released version 20060722_trunk

2006/7/21 -- released version 20060721_trunk

2006/7/20 -- released version 20060720_trunk

2006/7/19 -- released version 20060719_trunk

2006/7/18 -- released version 20060718_trunk

2006/7/17 -- released version 20060717_trunk

2006/7/16 -- released version 20060716_trunk

2006/7/15 -- released version 20060715_trunk

* added matchers CheckLatency and CheckLoss -- tobi, from Dylan Vanderhoof DylanV semaphore.com
* added TacacsPlus probe -- tobi, from Gary.Mikula * nasd.com

2006/7/14 -- released version 20060714_trunk

2006/7/13 -- released version 20060713_trunk

* pass 'prevmatch' to alert matcher plugins.
  -- niko, from Dylan Vanderhoof <DylanV *semaphore.com>
* fix subject in tSmoke 'morning' emails.  --niko, 
   from Jean-Philippe Luiggi <Jean-Philippe.Luiggi *revolutionlinux.com>

2006/7/12 -- released version 20060712_trunk

2006/7/11 -- released version 20060711_trunk

2006/7/10 -- released version 20060710_trunk

* AnotherDNS.pm: added option 'require_answers' for testing
  recursive DNS servers. -- niko
* fix running an external program on edge-triggered alerts.
  -- niko, from Peter Klausner <peter.klausner *gmail.com>

2006/7/9 -- released version 20060709_trunk

2006/7/8 -- released version 20060708_trunk

* fix loss_color description -- tobi
* fix loss_background implementation to still color mainline

2006/7/7 -- released version 20060707_trunk

2006/7/6 -- released version 20060706_trunk

2006/7/5 -- released version 20060705_trunk

2006/7/4 -- released version 20060704_trunk

* new feature to color the graph background in sync with the loss -- grahame.bo