@@ -1,3 +1,5 @@
+2006/7/30 -- released version 20060730_trunk
+
 2006/7/29 -- released version 20060729_trunk
 
 2006/7/28 -- released version 20060728_trunk
